src/objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MTS_CAS_Creado_para_guardia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creado para guardia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTS_CAS_Procesado_Festivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procesado Festivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTS_FOR_Provincia__c</fullName>
        <description>Campo que extrae los dos primeros dígitos del Código Postal para compararse con el campo FES_SEL_Provincia__c a la hora de adjudicar las ausencias a los profesionales</description>
        <formula>LEFT(PostalCode, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTS_TXT_Identificador__c</fullName>
        <description>Campo externo y exclusivo para identificar que concatena el Id del Recurso de Servicio (RSE_TXT_Codigo_Recurso__c) y el Id Territorio de Servicio (TDS_TXT_Identificador)</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(MTS_TXT_Identificador__c ),MTS_TXT_Identificador__c &lt;&gt; ServiceResource.RSE_TXT_Codigo_Recurso__c + &apos;_&apos; + ServiceTerritory.TDS_TXT_Identificador__c), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Secondary_STM</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
        <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provincia_obligatoria</fullName>
        <active>true</active>
        <description>Obligación de que el campo provincia esté relleno si se cumplen una serie de condiciones</description>
        <errorConditionFormula>(ISNULL(State)||ISBLANK(State)) &amp;&amp; NOT(ISNULL(PostalCode)) &amp;&amp; NOT(ISBLANK(PostalCode)) &amp;&amp; ISPICKVAL(TerritoryType, &quot;P&quot;)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>Debe rellenar el campo &quot;Provincia&quot;</errorMessage>
    </validationRules>
</CustomObject>